running from scratch, few fixes

--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,7 @@
 POSTGRES_USER=jaffle_user
 POSTGRES_PASSWORD=jaffle_password
 POSTGRES_PORT=5432
+POSTGRES_DB=jaffle_shop
 
 # Note: POSTGRES_DB is hardcoded to 'jaffle_shop' in docker-compose.yml
 # as recommended by the project documentation
