--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,8 @@ services:
     image: postgres:15
     container_name: jaffle_shop_postgres
     restart: unless-stopped
-    environment:
-      POSTGRES_DB: jaffle_shop
-      POSTGRES_USER: ${POSTGRES_USER:-jaffle_user}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-jaffle_password}
+    env_file:
+      - .env
     ports:
       - "${POSTGRES_PORT:-5432}:5432"
     volumes:
@@ -20,31 +18,3 @@ services:
       start_period: 30s
     networks:
       - jaffle_network
-
-  dbt:
-    build: .
-    container_name: jaffle_shop_dbt
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER:-jaffle_user}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-jaffle_password}
-    volumes:
-      - .:/app
-      - dbt_profiles:/root/.dbt
-    working_dir: /app
-    depends_on:
-      postgres:
-        condition: service_healthy
-    networks:
-      - jaffle_network
-    # Keep container running for interactive use
-    command: tail -f /dev/null
-
-volumes:
-  postgres_data:
-    driver: local
-  dbt_profiles:
-    driver: local
-
-networks:
-  jaffle_network:
-    driver: bridge
