fixes to readme

--- a/.env.local.sample
+++ b/.env.local.sample
@@ -7,8 +7,8 @@ DISABLE_DISCOVERY=true
 DISABLE_REMOTE=true
 
 # CLI-Specific Configuration (for local MCP with container database)
-DBT_PROJECT_DIR=/absolute/path/to/your/jaffle-shop
-DBT_PATH=/absolute/path/to/your/.pyenv/shims/dbt
+DBT_PROJECT_DIR=/absolute/path/to/your/jaffle-shop-with-ai
+DBT_PATH=dbt
 DBT_TARGET=local
 DBT_CLI_TIMEOUT=30
 
